manifests/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
  labels:
    app: portainer
spec:
  type: NodePort
  selector:
    app: portainer
  ports:
  - name: http
    port: 9000
    targetPort: 9000
    protocol: TCP
    nodePort: 30900
  - name: https
    port: 9443
    targetPort: 9443
    protocol: TCP
    nodePort: 30943
